--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -55,7 +55,7 @@
                                 <editor role="projectEditor" ref="eft:person-139">John Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.2.1 <date>2023</date>
+                <edition>v 1.2.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -80,7 +80,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-05-19</date>
+                <date>2023-06-30</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh220" type="text">
@@ -97,7 +97,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-30T11:15:28.595Z" user="admin">30/06/2023 11:15:28</note>
+                                <note type="lastUpdated" date-time="2023-06-30T11:19:42.842Z" user="admin">30/06/2023 11:19:42</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -163,6 +163,7 @@
                             <note type="updated" update="text-version" value="1.1.10" date-time="2023-06-22T18:30:40.915Z" user="john">Auto (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-06-30T11:15:24.152Z" user="john">1.a</note>
                             <note type="updated" update="text-version" value="1.2.1" date-time="2023-06-30T11:15:24.152Z" user="john">Back to published status, but silently as more edits remain to be done.</note>
+                            <note type="updated" update="text-version" value="1.2.2" date-time="2023-06-30T11:19:39.943Z" user="john">1.2.2</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
