--- a/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
+++ b/translations/kangyur/placeholders/088-011_toh517,871-the_incantation_the_stainless.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dri ma med pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavimalanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-088-011"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh517" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:32:50.98Z" user="celso">23/09/2021 17:32:50</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:24:40.645Z" user="admin">30/06/2023 11:24:40</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:24:36.303Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:24:36.303Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
