--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gzungs chen po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-088-023"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh529" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:32:59.42Z" user="celso">23/09/2021 17:32:59</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:26:09.446Z" user="admin">30/06/2023 11:26:09</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:05.106Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
