--- a/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">su rU pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">surūpanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-088-035"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh540" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:09.243Z" user="celso">23/09/2021 17:33:09</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:26:49.569Z" user="admin">30/06/2023 11:26:49</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:26:45.223Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:26:45.223Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
