--- a/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-020_toh576,932-the_incantation_of_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -11,8 +11,13 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Perfection of Wisdom in a Hundred Thousand Lines</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa stong phrag brgya pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-090-020"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh576" type="text">
@@ -35,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:30.874Z" user="celso">23/09/2021 17:33:30</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:28:42.971Z" user="admin">30/06/2023 11:28:42</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:28:38.62Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:28:38.62Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
