--- a/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-021_toh577,933-the_incantation_of_the_perfection_of_wisdom_in_twentyfive_thousand_lines.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa stong phrag nyi shu lnga ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa shes rab kyi pha rol tu phyin pa stong phrag nyi shu lnga pa'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-090-021"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh577" type="text">
@@ -34,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:32.281Z" user="celso">23/09/2021 17:33:32</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:29:17.581Z" user="admin">30/06/2023 11:29:17</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:29:13.232Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:29:13.232Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
