--- a/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
+++ b/translations/kangyur/placeholders/090-030_toh586,942-the_incantation_that_captures_the_samadhirajasutra.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī that Captures the King of Meditative Equipoise Sūtra (samādhirājasūtra)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa ting nge 'dzin gyi rgyal po'i mdo gzung bar 'gyur ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-090-030"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh586" type="text">
@@ -36,7 +41,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:43.661Z" user="celso">23/09/2021 17:33:43</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:31:03.098Z" user="admin">30/06/2023 11:31:03</note>
+                <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:30:58.749Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:30:58.749Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
