--- a/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
+++ b/translations/kangyur/placeholders/090-031_toh587,943-essence_of_the_great_peahen.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rma bya chen mo'i snying po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rma bya chen mo'i snying po/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-090-031"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh587" type="text">
@@ -34,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:26 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:31:46.534Z" user="admin">30/06/2023 11:31:46</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:31:42.181Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:31:42.181Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
