--- a/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
+++ b/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa be con chen po zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamahādaṇḍanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-003"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh606" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:34:08.109Z" user="celso">23/09/2021 17:34:08</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:33:31.669Z" user="admin">30/06/2023 11:33:31</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:33:27.316Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
