--- a/translations/kangyur/placeholders/091-050_toh653,1062-the_mahasutra_the_sutra_of_the_great_assembly.xml
+++ b/translations/kangyur/placeholders/091-050_toh653,1062-the_mahasutra_the_sutra_of_the_great_assembly.xml
@@ -14,8 +14,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāsamājasūtranāmamahāsūtra</title>
                 <title type="otherTitle" xml:lang="en">[Note: cf Toh 34 for the Theravādin version]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-050"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh653" type="text">
@@ -38,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:08:34 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:34:07.942Z" user="admin">30/06/2023 11:34:07</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:34:03.575Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
