--- a/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nor gyi rgyun ces bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryavasudhārānāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-059"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh662" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:01.141Z" user="celso">23/09/2021 17:35:01</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:35:20.888Z" user="admin">30/06/2023 11:35:20</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:35:16.554Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
