--- a/translations/kangyur/placeholders/091-060_toh663-the_practice_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-060_toh663-the_practice_of_vasudhara.xml
@@ -9,8 +9,13 @@
                 <title type="mainTitle" xml:lang="en">The Practice of Vasudhārā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das ma nor rgyun ma'i rtog pa/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-060"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh663" type="text">
@@ -24,7 +29,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:42 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:35:56.935Z" user="admin">30/06/2023 11:35:56</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:35:52.599Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:35:52.599Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
