--- a/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
+++ b/translations/kangyur/placeholders/091-082_toh684-the_incantation_the_questions_of_narayana.xml
@@ -11,8 +11,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">nārāyaṇaparipṛcchārya­mahāmāyāvijayavāhinī­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="en">[Note: only in late Degé printings; not in Degé par phud, nor in Narthang, Peking, Cone, Lhasa, or Urga Kangyurs.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-091-082"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh684" type="text">
@@ -26,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:11.492Z" user="celso">23/09/2021 17:35:11</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:37:02.27Z" user="admin">30/06/2023 11:37:02</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:36:57.931Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
