--- a/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
+++ b/translations/kangyur/placeholders/093-012_toh697,905-the_incantation_of_nilakantha.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nI la kaN+Tha zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryanīlakaṇṭhanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-093-012"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh697" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:24.592Z" user="celso">23/09/2021 17:35:24</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:37:35.135Z" user="admin">30/06/2023 11:37:35</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:37:30.797Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
