--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa thams cad rnam par sbyong ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasarva­karmāvaraṇaviśodhanī­nāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-094-020"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh743" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:52.058Z" user="celso">23/09/2021 17:35:52</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:39:18.482Z" user="admin">30/06/2023 11:39:18</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:14.129Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
