--- a/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
+++ b/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje mchu zhes bya ba klu'i dam tshig</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">vajratuṇḍanāmanāgasamaya</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-008"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh759" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:49 by admin</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:39:49.124Z" user="admin">30/06/2023 11:39:49</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:39:44.803Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
