--- a/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
@@ -12,8 +12,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nor bu bzang po'i gzungs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamaṇibhadranāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-013"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh764" type="text">
@@ -36,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:08.112Z" user="celso">23/09/2021 17:36:08</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:40:28.707Z" user="admin">30/06/2023 11:40:28</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:40:24.361Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:40:24.361Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
