--- a/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
@@ -14,8 +14,13 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">kāruṇikāryajambhala­jalendrasuśaṅkara­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">[Note: Degé has kāruṇikasyārya­jambhalajalendra­suśaṅkaradhāraṇī]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-018"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh769" type="text">
@@ -38,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:11.015Z" user="celso">23/09/2021 17:36:11</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:41:14.825Z" user="admin">30/06/2023 11:41:14</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:41:10.476Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:41:10.476Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
