--- a/translations/kangyur/placeholders/096-021_toh772,907-the_incantation_of_mekhala.xml
+++ b/translations/kangyur/placeholders/096-021_toh772,907-the_incantation_of_mekhala.xml
@@ -13,8 +13,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me kha la zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamekhalanāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-021"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh772" type="text">
@@ -37,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:12.433Z" user="celso">23/09/2021 17:36:12</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:41:46.065Z" user="admin">30/06/2023 11:41:46</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:41:41.718Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:41:41.718Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
