--- a/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
+++ b/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">ngan song thams cad yongs su sbyong ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">ngan song thams cad yongs su sbyong ba zhes bya ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-096-031"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh782" type="text">
@@ -34,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:22.424Z" user="celso">23/09/2021 17:36:22</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:42:18.986Z" user="admin">30/06/2023 11:42:18</note>    <note type="updated" update="translation-status" value="4" date-time="2023-06-30T11:42:14.628Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2023-06-30T11:42:14.628Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
