--- a/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
+++ b/translations/kangyur/placeholders/014-001_toh8-1-chapters_1_to_13_the_perfection_of_wisdom_in_one_hundred_thousand_lines.xml
@@ -17,10 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2021</date>
+                <edition>v 0.0.16 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-014-001"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-06T13:21:25.181Z" user="admin">06/06/2023 13:21:25</note>
+                <note type="lastUpdated" date-time="2023-06-30T11:54:12.674Z" user="admin">30/06/2023 11:54:12</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-02-23T18:52:39.151Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-23T18:52:39.151Z" user="john">Split from original single Toh 8 file</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-23T18:54:30.339Z" user="john">Auto (update-contributors)</note>
@@ -60,6 +60,8 @@
                 <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-19T07:14:02.498Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-06-06T13:21:20.972Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.15" date-time="2023-06-06T13:21:20.972Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-06-30T11:54:08.339Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.16" date-time="2023-06-30T11:54:08.339Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
