--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -41,7 +41,7 @@
                 <sponsor ref="sponsors.xml#sponsor-181">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -78,7 +78,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-08T22:11:50.136Z" user="admin">08/07/2023 22:11:50</note>
+                <note type="lastUpdated" date-time="2023-07-09T15:26:59.515Z" user="admin">09/07/2023 15:26:59</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-06T13:46:43.307Z" user="line-tofte">2.h</note>
@@ -126,6 +126,7 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-06-26T09:11:46.147Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2023-07-08T22:11:45.596Z" user="andre">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-07-08T22:11:45.596Z" user="andre">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2023-07-09T15:26:56.482Z" user="andre">Minor edits to the glossary.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -16497,18 +16498,6 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-089-012-3521">
-                            <term>ācārya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">slob dpon </term>
-                            <term xml:lang="bo">སློབ་དཔོན།</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">ācārya</term>
-                            <term type="definition">A traditional Indian title denoting a person who
-                                has authority because of superior knowledge, spiritual training, or
-                                position. In the Buddhist context, it is most often used for a
-                                scholar of great renown.</term>
-                        </gloss>
-                    </item>
-                    <item>
                         <gloss xml:id="UT22084-089-012-3522" type="term" mode="match">
                             <term>five actions with immediate result upon death</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">mtshams med pa lnga</term>
@@ -17204,16 +17193,6 @@
                                 transmitted orally, the bhāṇakas were the key means of preserving
                                 the teachings. Various groups of bhāṇakas specialized in memorizing
                                 and reciting specific sets of sūtras or the vinaya. </term>
-                        </gloss>
-                    </item>
-                    <item>
-                        <gloss type="term" xml:id="UT22084-089-012-3571">
-                            <term>Dharma master</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" status="verified">chos kyi slob dpon </term>
-                            <term xml:lang="bo">ཆོས་ཀྱི་སློབ་དཔོན།</term>
-                            <term xml:lang="zh" type="attestedSource">法師</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">dharmācarya </term>
-                            <term type="definition">See “ācārya.”</term>
                         </gloss>
                     </item>
                     <item>
