--- a/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
+++ b/translations/kangyur/translations/068-012_toh278-the_eight_auspicious_ones.xml
@@ -28,7 +28,7 @@
                                 <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -74,7 +74,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-20T06:54:10.493Z" user="admin">20/06/2023 06:54:10</note>
+                                <note type="lastUpdated" date-time="2023-07-11T07:43:55.314Z" user="admin">11/07/2023 07:43:55</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-01T15:50:29.641Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-03-02T14:34:15.282Z" user="line-tofte">3</note>
@@ -132,6 +132,7 @@
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
                             <note type="updated" update="translation-status" value="1" date-time="2023-06-20T06:54:06.227Z" user="sameer">1</note>
                             <note type="updated" update="text-version" value="1.0.5" date-time="2023-06-20T06:54:06.227Z" user="sameer">Included in App v 2.0</note>
+                            <note type="updated" update="text-version" value="1.0.6" date-time="2023-07-11T07:43:52.305Z" user="john">Acknowledgments section normalized.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -160,14 +161,16 @@
                         <div type="acknowledgment">
                                 <head type="acknowledgment" tid="3">Acknowledgements</head>
                                 <milestone unit="chunk" xml:id="UT22084-068-012-2"/>
-                                <p tid="4">Geshema Tenzin Lhadron (Chopa Tenzin Lhadron), Dr.
+                                <p tid="4">The sūtra was translated by Bhikṣuṇī Thubten Damcho 
+                                        of Sravasti Abbey.<!--Geshema Tenzin Lhadron (Chopa Tenzin Lhadron), Dr.
                                         Nathaniel Rich, and members of the 84000 editorial committee
                                         kindly reviewed this translation. I am grateful to Bhikṣuṇī
                                         Thubten Chodron and the Sravasti Abbey community for their
                                         encouragement and support; Bhikṣuṇī Dr. Heng Ching Shih, Dr.
                                         William Magee, and Dr. Paul Hackett for teaching me how to
                                         translate Buddhist texts; and Maitripa College and my
-                                        parents for sponsoring my Tibetan language studies.</p>
+                                        parents for sponsoring my Tibetan language studies.-->
+                </p>
 
                                 <p tid="5">The translation was completed under the patronage and
                                         supervision of 84000: Translating the Words of the
@@ -683,32 +686,13 @@
                                                 </gloss>
                                         </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-012-77">
-                                                  <term>thus-gone one </term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">de bzhin
-                                                  gshegs pa </term>
-                                                  <term xml:lang="bo">དེ་བཞིན་གཤེགས་པ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">tathāgata</term>
-                                                  <term type="definition">A frequently used synonym
-                                                  for buddhas. According to different explanations,
-                                                  it can be read as <foreign xml:lang="Sa-Ltn" type="term">tathā-gata</foreign>, literally
-                                                  meaning “one who has thus gone,” or as <foreign xml:lang="Sa-Ltn" type="term">tathā-agata</foreign>, “one who has thus
-                                                  come.” <foreign xml:lang="Sa-Ltn" type="term">Gata</foreign>, though literally meaning “gone,”
-                                                  is a past passive participle used to describe a
-                                                  state or condition of existence. <foreign xml:lang="Sa-Ltn" type="term">Tatha</foreign>(<foreign xml:lang="Sa-Ltn" type="term">tā</foreign>), often rendered as
-                                                  “suchness” or “thusness,” is the quality or
-                                                  condition of things as they really are, which
-                                                  cannot be conveyed in conceptual, dualistic terms.
-                                                  Therefore, this epithet is interpreted in
-                                                  different ways, but in general it implies one who
-                                                  has departed in the wake of the buddhas of the
-                                                  past, or one who has manifested supreme
-                                                  enlightenment based on the reality that does not
-                                                  abide in the two extremes of existence and
-                                                  quiescence. Here also used as a specific epithet
-                                                  of the Buddha Śākyamuni.</term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-77" type="term" mode="match">
+                            <term>thus-gone one</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">de bzhin gshegs pa</term>
+                            <term xml:lang="bo" type="sourceAttested">དེ་བཞིན་གཤེགས་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">tathāgata</term>
+                            <term type="definition">A frequently used synonym for buddhas. According to different explanations, it can be read as <foreign xml:lang="Sa-Ltn" type="term">tathā-gata</foreign>, literally meaning “one who has thus gone,” or as <foreign xml:lang="Sa-Ltn" type="term">tathā-agata</foreign>, “one who has thus come.” <foreign xml:lang="Sa-Ltn" type="term">Gata</foreign>, though literally meaning “gone,” is a past passive participle used to describe a state or condition of existence. <foreign xml:lang="Sa-Ltn" type="term">Tatha</foreign>(<foreign xml:lang="Sa-Ltn" type="term">tā</foreign>), often rendered as “suchness” or “thusness,” is the quality or condition of things as they really are, which cannot be conveyed in conceptual, dualistic terms. Therefore, this epithet is interpreted in different ways, but in general it implies one who has departed in the wake of the buddhas of the past, or one who has manifested supreme enlightenment based on the reality that does not abide in the two extremes of existence and quiescence. Here also used as a specific epithet of the Buddha Śākyamuni.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-068-012-78">
@@ -754,19 +738,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-012-81">
-                                                  <term>god</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">lha </term>
-                                                  <term xml:lang="bo">ལྷ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">deva</term>
-                                                  <term type="definition">One of the five or six
-                                                  classes of sentient beings, dominated by
-                                                  exaltation, frivolousness, and pride. According to
-                                                  Buddhist cosmology, the gods live in many divine
-                                                  realms within the desire realm, the form realm,
-                                                  and the formless realm.</term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-81" type="term" mode="match">
+                            <term>god</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">lha</term>
+                            <term xml:lang="bo" type="sourceAttested">ལྷ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">deva</term>
+                            <term type="definition">One of the five or six classes of sentient beings, dominated by exaltation, frivolousness, and pride. According to Buddhist cosmology, the gods live in many divine realms within the desire realm, the form realm, and the formless realm.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss xml:id="UT22084-068-012-82" type="term" mode="match">
@@ -778,16 +756,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-068-012-83">
-                                                  <term>gandharva</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">dri za </term>
-                                                  <term xml:lang="bo">དྲི་ཟ།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">gandharva</term>
-                                                  <term type="definition">A class of semidivine
-                                                  beings sometimes referred to as “heavenly
-                                                  musicians.” </term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-83" type="term" mode="match">
+                            <term>gandharva</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">dri za</term>
+                            <term xml:lang="bo" type="sourceAttested">དྲི་ཟ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">gandharva</term>
+                            <term type="definition">A class of semidivine beings sometimes referred to as “heavenly musicians.” </term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-068-012-84">
@@ -963,28 +938,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="person" xml:id="UT22084-068-012-98">
-                                                  <term>Yeshé Dé</term>
-                                                  <term xml:lang="Bo-Ltn" status="verified">ye shes
-                                                  sde </term>
-                                                  <term xml:lang="bo">ཡེ་ཤེས་སྡེ།</term>
-                                                  <term xml:lang="Sa-Ltn"/>
-                                                  <term type="definition">Yeshé Dé (late eighth to
-                                                  early ninth century) was the most prolific
-                                                  translator of sūtras into Tibetan. Altogether he
-                                                  is credited with the translation of more than one
-                                                  hundred sixty sūtra translations and more than one
-                                                  hundred additional translations, mostly on tantric
-                                                  topics. In spite of Yeshé Dé’s great importance
-                                                  for the propagation of Buddhism in Tibet during
-                                                  the imperial era, only a few biographical details
-                                                  about this figure are known. Later sources
-                                                  describe him as a student of the Indian teacher
-                                                  Padmasambhava, and he is also credited with
-                                                  teaching both sūtra and tantra widely to students
-                                                  of his own.</term>
-
-                                                </gloss>
+                        <gloss xml:id="UT22084-068-012-98" type="person" mode="match">
+                            <term>Yeshé Dé</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">ye shes sde</term>
+                            <term xml:lang="bo" type="sourceAttested">ཡེ་ཤེས་སྡེ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified"/>
+                            <term type="definition">Yeshé Dé (late eighth to early ninth century) was the most prolific translator of sūtras into Tibetan. Altogether he is credited with the translation of more than one hundred sixty sūtra translations and more than one hundred additional translations, mostly on tantric topics. In spite of Yeshé Dé’s great importance for the propagation of Buddhism in Tibet during the imperial era, only a few biographical details about this figure are known. Later sources describe him as a student of the Indian teacher Padmasambhava, and he is also credited with teaching both sūtra and tantra widely to students of his own.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="person" xml:id="UT22084-068-012-99">
