--- a/translations/kangyur/translations/060-001_toh172-the_question_of_manjusri.xml
+++ b/translations/kangyur/translations/060-001_toh172-the_question_of_manjusri.xml
@@ -29,7 +29,7 @@
         <editor role="finalReviewer" ref="contributors.xml#person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.15 <date>2023</date>
+                <edition>v 1.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -61,7 +61,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-19T12:49:59.73Z" user="admin">19/04/2023 12:49:59</note>
+        <note type="lastUpdated" date-time="2023-07-11T17:05:12.681Z" user="admin">11/07/2023 17:05:12</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-06T14:17:10.983Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-11-24T14:27:25.922Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-24T14:27:25.922Z" user="line-tofte">Auto
@@ -100,6 +100,7 @@
         <note type="updated" update="text-version" value="0.0.3" date-time="2021-10-18T07:13:19.062Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-21T10:26:10.567Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="translation-status" value="1" date-time="2021-10-27T08:08:45.373Z" user="mike">1</note>
+        <note type="updated" update="translation-status" value="1.a" date-time="2021-10-27T08:08:45.373Z" user="admin">Note added retrospectively based on date of status '1'</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2021-10-27T08:08:45.373Z" user="mike">First published version </note>
         <note type="updated" update="text-version" value="1.0.1" date-time="2021-10-29T00:25:38.511Z" user="konchog">One tiny fix, taking the Nikayas out of italics in the intro (I missed this in the copyediting stage).</note>
         <note type="updated" update="text-version" value="1.0.2" date-time="2021-10-29T10:53:38.745Z" user="john">minor edits</note>
@@ -116,6 +117,7 @@
           <note type="updated" update="text-version" value="1.0.13" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.0.14" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.0.15" date-time="2023-04-19T12:49:56.873Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
+          <note type="updated" update="text-version" value="1.0.16" date-time="2023-07-11T17:05:09.791Z" user="celso">Fixed bad links to Chinese tripitika</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -658,11 +660,11 @@
               manuscript from the Potala</title>. Sanskrit Texts from the Tibetan Autonomous Region 7/1. Beijing: China Tibetology Publishing House;
             Vienna: Austrian Academy of Sciences Press, 2010. </bibl>
           <bibl xml:id="UT22084-060-001-134">Faxian, trans. <title xml:lang="zh">佛説妙吉祥菩薩所問大乘法螺經</title> (<title xml:lang="Zh-Ltn">fo shuo miao ji
-              xiang pu sa suo wen da cheng fa luo jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0473.html">Taishō 473</ref>. </bibl>
+            xiang pu sa suo wen da cheng fa luo jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0473.html">Taishō 473</ref>. </bibl>
           <bibl xml:id="UT22084-060-001-135">Divākara, trans. <title xml:lang="zh">大乘百福相經</title> (<title xml:lang="Zh-Ltn">da cheng bai fu xiang
-              jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0661.html">Taishō 661</ref>. </bibl>
+            jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0661.html">Taishō 661</ref>. </bibl>
           <bibl xml:id="UT22084-060-001-136">Divākara, trans. <title xml:lang="zh">大乘百福莊嚴相經</title> (<title xml:lang="Zh-Ltn">da cheng bai fu zhuang
-              yan xiang jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0662.html">Taishō 662</ref>.</bibl>
+            yan xiang jing</title>; Chinese translation of <title xml:lang="en">The Question of Mañjuśrī</title>), <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0662.html">Taishō 662</ref>.</bibl>
         </div>
         <div type="section" xml:id="UT22084-060-001-listBibl-3">
           <head type="section" tid="69">Secondary Literature</head>
@@ -1992,17 +1994,14 @@
             </gloss>
           </item>
           <item>
-            <gloss type="term" xml:id="UT22084-060-001-261">
-              <term>tathāgata</term>
-              <term xml:lang="Bo-Ltn" status="verified">de bzhin gshegs pa </term>
-              <term xml:lang="bo">དེ་བཞིན་གཤེགས་པ།</term>
-              <term xml:lang="Sa-Ltn">tathāgata</term>
-              <term type="definition">A frequently used synonym for <foreign type="term" xml:lang="Sa-Ltn">buddha</foreign>, literally meaning “one
-                who has thus gone.” The expression is interpreted in different ways, but in general it implies “one who has departed in the wake of
-                the buddhas of the past” or “one who has manifested the supreme awakening dependent on the reality that does not abide in the two
-                extremes of existence and quiescence.”</term>
-            </gloss>
-          </item>
+                        <gloss xml:id="UT22084-060-001-261" type="term" mode="match">
+                            <term>tathāgata</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">de bzhin gshegs pa</term>
+                            <term xml:lang="bo" type="sourceAttested">དེ་བཞིན་གཤེགས་པ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">tathāgata</term>
+                            <term type="definition">A frequently used synonym for <foreign type="term" xml:lang="Sa-Ltn">buddha</foreign>, literally meaning “one who has thus gone.” The expression is interpreted in different ways, but in general it implies “one who has departed in the wake of the buddhas of the past” or “one who has manifested the supreme awakening dependent on the reality that does not abide in the two extremes of existence and quiescence.”</term>
+                        </gloss>
+                    </item>
           <item>
             <gloss type="term" xml:id="UT22084-060-001-262">
               <term>ten virtuous actions</term>
