--- a/translations/kangyur/translations/072-035_toh335-the_khakkhara_sutra.xml
+++ b/translations/kangyur/translations/072-035_toh335-the_khakkhara_sutra.xml
@@ -27,7 +27,7 @@
                 <editor role="reviser" ref="contributors.xml#person-303">Eleanor Brunnen</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.3 <date>2021</date>
+                <edition>v 1.2.4 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T17:04:27.793Z" user="celso">18/01/2023 17:04:27</note>
+                <note type="lastUpdated" date-time="2023-07-11T18:14:47.132Z" user="admin">11/07/2023 18:14:47</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T09:53:16.431Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-11-04T09:53:16.431Z" user="andreas">2.g</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:03:27.906Z" user="mike">2.h</note>
@@ -81,6 +81,7 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2020-11-04T12:10:27.699Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2020-11-04T12:10:46.215Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1" date-time="2020-11-19T10:09:57.661Z" user="mike">1</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2020-11-19T10:09:57.661Z" user="admin">Note added retrospectively based on date of status '1'</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2020-11-19T10:09:57.661Z" user="mike">First Published Version</note>
                 <note type="updated" update="text-version" value="1.1.0" date-time="2020-11-19T18:55:33.71Z" user="john">Various minor corrections and adjustments as annotated in Hypothesis</note>
                 <note type="updated" update="text-version" value="1.1.1" date-time="2020-11-19T19:19:31.497Z" user="john">Further small changes</note>
@@ -95,6 +96,7 @@
     <note type="updated" update="text-version" value="1.2.1" date-time="2022-01-06T12:05:35.601Z" user="john">Added para to intro on possible Khotanese sources, with biblio refs for Chomden Rigral.</note>
     <note type="updated" update="text-version" value="1.2.2" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.2.3" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+    <note type="updated" update="text-version" value="1.2.4" date-time="2023-07-11T18:14:44.236Z" user="celso">Fixed bad links to Chinese Tripitika</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -545,13 +547,13 @@
                                         <bibl xml:id="UT22084-072-035-84">Takakusu Junjirō, and Kaigyoku Watanabe, eds. <title xml:lang="Zh-Ltn">Taishō shinshū Daizōkyō</title>. 85
                                                 vols. Tokyo: Taishō Issaikyō Kankōkai, 1924–32. </bibl>
                                   <bibl xml:id="UT22084-072-035-85">
-                        <title xml:lang="Zh-Ltn">De daoti cheng xizhang jing</title> <title xml:lang="zh">得道梯橙錫杖經</title>. <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T0785.html">Taishō 785</ref>. Appendix of Taishō 785:
+                        <title xml:lang="Zh-Ltn">De daoti cheng xizhang jing</title> <title xml:lang="zh">得道梯橙錫杖經</title>. <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0785.html">Taishō 785</ref>. Appendix of Taishō 785:
                                                 <title xml:lang="Zh-Ltn">Chi xizhang fa</title> <title xml:lang="zh">持錫杖法</title>. Translator unknown.</bibl>
                                         <bibl xml:id="UT22084-072-035-86">
                         <title xml:lang="Zh-Ltn">Genbenshuoyiqieyoubu biqiuni pinaiye</title> <title xml:lang="zh">根本說一切有部苾芻尼毘奈耶</title>.
-                                          <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T1443.html">Taishō 1443</ref>. Translated by Yijing.</bibl>
+                                          <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T1443.html">Taishō 1443</ref>. Translated by Yijing.</bibl>
                                   <bibl xml:id="UT22084-072-035-87">
-                        <title xml:lang="Zh-Ltn">Nanhai jigui neifa zhuang</title> <title xml:lang="zh">南海寄歸內法傳</title>. <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2012/T2125.html">Taishō 2125</ref>. Written by Yijing.</bibl>
+                        <title xml:lang="Zh-Ltn">Nanhai jigui neifa zhuang</title> <title xml:lang="zh">南海寄歸內法傳</title>. <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T2125.html">Taishō 2125</ref>. Written by Yijing.</bibl>
                                 </div>
                                 <div type="section" xml:id="UT22084-072-035-listBibl-3">
                                         <head type="section" tid="72">Secondary Literature</head>
